# cartesi-solana

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
src/: account_manager.rs  adapter.rs  anchor_lang.rs  cartesi_stub.rs  cpi.rs  executor.rs  lib.rs  owner_manager.rs  transaction.rs
tests/: account_manager_test.rs  adapter_test.rs  anchor_lang_test.rs  cpi_test.rs  executor_test.rs  integration_test.rs  owner_manager_test.rs
