[package]
name = "cartesi-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license-file = "LICENSE"
description = "Lib to help you run a Solana program inside the Cartesi Machine"
homepage = "https://github.com/Calindra/cartesi-solana"
repository = "https://github.com/Calindra/cartesi-solana"
readme = "README.md"

exclude = [
    "tests/*",
    ".github/*",
]


[dependencies]
anchor-lang = "^0.25.0"
anchor-spl = "^0.25.0"
base64 = "0.13.0"
bincode = "1.3.1"
generic-array = "0.14.6"
hex = "0.4.3"
solana-sdk = "1.10.33"
borsh = "0.9.3"

# anchor-lang = { path = "../../../anchor/lang" }
# anchor-spl = { path = "../../../anchor/spl" }
# spl-associated-token-account = "^1.0.5"
serde_json = "1.0.85"
serde = "1.0.144"
once_cell = "1.15.0"
lazy_static = "1.4.0"
solana-program = "1.10.41"